// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlatButton Snap should renders correctly with isPrimary false 1`] = `
<button
  className="bt-flat bold-16"
  onClick={[Function]}
  title="Click to load [l]"
  type="button"
>
  <span
    className="bt-flat__caption"
  >
    Load
  </span>
</button>
`;

exports[`FlatButton Snap should renders correctly with isPrimary true 1`] = `
<button
  className="bt-flat bold-16"
  onClick={[Function]}
  style={
    {
      "color": "#607d8b",
    }
  }
  title="Click to load [l]"
  type="button"
>
  <span
    className="bt-flat__caption"
  >
    Load
  </span>
</button>
`;
